--- a/pages_static/templates/pages_static/about.html
+++ b/pages_static/templates/pages_static/about.html
@@ -80,9 +80,9 @@
                         for creating this distinctive flowery pattern of Banarasi silk sarees, which are so typical in present days.
                     </p>
                 </div>
-                <div class='row'>
-                    <img class='col-6 women-image' src="{% static 'pages_static/images/about/oct4674.svg'%}" alt="">
-                    <img class='col-6 women-image' src="{% static 'pages_static/images/about/image3.png'%}" alt="">
+               <div class='row'>
+                    <div class="col-md-6"><img class='women-image img-fluid' src="{% static 'pages_static/images/about/oct4674.svg'%}" alt=""></div>
+                    <div class="col-md-6"><img class='women-image img-fluid' src="{% static 'pages_static/images/about/image3.png'%}" alt=""></div>
                 </div>
             </div>
         </div>
@@ -137,16 +137,16 @@
             <div>
                 <div id='wrapper-image'>
                     <div class="row">
-                        <img class='col-6 women-image' src="{% static 'pages_static/images/about/B.png'%}" alt="">
-                        <img class='col-6 women-image' src="{% static 'pages_static/images/about/C.png'%}" alt="">
+                        <div class="col-md-6"><img class='women-image img-fluid' src="{% static 'pages_static/images/about/B.png'%}" alt=""></div>
+                        <div class="col-md-6"><img class='women-image img-fluid' src="{% static 'pages_static/images/about/C.png'%}" alt=""></div>                
                     </div>
                     <div class="row">
-                        <img src="{% static 'pages_static/images/about/D.png'%}" class='col-6 women-image' alt="">
-                        <img src="{% static 'pages_static/images/about/E.png'%}" class='col-6 women-image' alt="">
+                        <div class="col-md-6"><img src="{% static 'pages_static/images/about/D.png'%}" class='women-image img-fluid' alt=""></div>
+                        <div class="col-md-6"><img src="{% static 'pages_static/images/about/E.png'%}" class='women-image img-fluid' alt=""></div>
                     </div>
                     <div class="row">
-                        <img src="{% static 'pages_static/images/about/F.png'%}" class='col-6 women-image' alt="">
-                        <img src="{% static 'pages_static/images/about/G.png'%}" class='col-6 women-image' alt="">
+                        <div class="col-md-6"><img src="{% static 'pages_static/images/about/F.png'%}" class='women-image img-fluid' alt=""></div>
+                        <div class="col-md-6"><img src="{% static 'pages_static/images/about/G.png'%}" class='women-image img-fluid' alt=""></div>
                     </div>
                 </div>
             </div>
