--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -227,7 +227,9 @@
 
       <div id="pop_up">
         <div class="container p_cont">
-          <div class="cross" onclick="closePopUp()">+</div>
+          <div class="cross" onclick="closePopUp()" style="
+    transform: rotate(45deg);
+">+</div>
           <form>
             {% csrf_token %}
             <div class="row mt-5">
