--- a/pages_static/templates/pages_static/privacy_p2.html
+++ b/pages_static/templates/pages_static/privacy_p2.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Privacy & Policy{% endblock %}
+{% block title %}Delivery & Shopping{% endblock %}
 
 {% block css %}
 
@@ -11,7 +11,7 @@
 {% block body %}
 <div class="section-heading">
     <img src="{%static 'pages_static/images/section-heading-decor.png' %}" alt="" />
-    <h1>Privacy & Policy</h1>
+    <h1>Delivery & Shopping</h1>
     <img class="flip-horizontal" src="{%static 'pages_static/images/section-heading-decor.png' %}" alt="" />
 </div>
 <div class="container">
