--- a/blogs/templates/blogs.html
+++ b/blogs/templates/blogs.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="text-center" style="margin-top:10rem;">
+                <div class="text-center m_blog_img" style="margin-top:10rem;">
                     <img class="img-fluid" src="{% static 'blogs/Rectangle 337.png' %}" alt="">
                 </div>
             </div>
