--- a/pages_static/static/pages_static/css/contactUs.css
+++ b/pages_static/static/pages_static/css/contactUs.css
@@ -80,8 +80,6 @@
     width: 100%;
 }
 #map {
-    height: 400px;
-    width: 100%;
     background-color: #685f5f;
   }
 /* Responsive */
@@ -122,5 +120,10 @@
     }
     .find{
         font-size: 30px;
+    }
+}
+@media only screen and (max-width: 578px) {
+    #map{
+        height: 200px;
     }
 }
