--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -25,40 +25,37 @@
                 <a class="nav-item" href="{% url 'collections' %}">Collection</a>
             </div>
             <div class='middle'>
-                <img src="static/pages_static/images/index/crown.png" alt="" style="width: 150px;">
-                <h2>PANAYA</h2>
+                <img src="{%static 'pages_static/images/index/crown.png' %}" alt="" style="width: 200px;">
+                <h2><a href="/">PANAYA</a></h2>
                 <p>The Heritage Collection</p>
             </div>
             <div id='nav-right container'>
                 <a class="nav-item" href="{% url 'product_list' %}">Shop</a>
-                <div class='col-nav'>
-                    <a href="{% if request.user.is_authenticated %}{% url 'profile' %}{% else %}{% url 'login' %}{% endif %}"
-                        class='row'>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-person" viewBox="0 0 16 16">
-                            <path
-                                d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                        </svg>
-                    </a>
-                    <a class="nav-item col" href="{% url 'blogs' %}">Blogs</a>
-                </div>
-                <div class='col-nav'>
-                    <a class='row'
-                        href="{% if request.user.is_authenticated %}{% url 'cart' %}{% else %}{% url 'login' %}{% endif %}">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-cart" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                        </svg>
-                    </a>
-                    <a class="nav-item row" href="{% url 'contact' %}">Contact Us</a>
-                </div>
-
+                <a class="nav-item" href="{% url 'blogs' %}">Blogs</a>
+                <a class="nav-item" href="{% url 'contact' %}">Contact Us</a>
             </div>
+            <div style="    position: absolute; margin-bottom: 5%; margin-left: 67%;">
+                 <a href="{% if request.user.is_authenticated %}{% url 'profile' %}{% else %}{% url 'login' %}{% endif %}"
+                    class='row'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-person" viewBox="0 0 16 16">
+                        <path
+                            d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                    </svg>
+                </a>
+                <a class='row'
+                    href="{% if request.user.is_authenticated %}{% url 'cart' %}{% else %}{% url 'login' %}{% endif %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-cart" viewBox="0 0 16 16">
+                        <path
+                            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                    </svg>
+                </a>
+            <div/>
         </nav>
         <nav class="mob_view">
-            <img src="static/pages_static/images/index/crown.png" alt="" style="width: 90px;">
-            <p class="panaya text-center">PANAYA</p>
+            <img src="{%static 'pages_static/images/index/crown.png' %}" alt="" style="width: 100px;">
+            <p class="panaya text-center"><a href="/">PANAYA</a></p>
             <p class="panaya_d">The Heritage Collection</p>
             <div class="hamburger" style="position: absolute;">
                 <span class="bar"></span>
