--- a/pages_static/templates/pages_static/tnc.html
+++ b/pages_static/templates/pages_static/tnc.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Privacy & Policy{% endblock %}
+{% block title %}Terms & Condition{% endblock %}
 
 {% block css %}
 
